--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_FRAPPE_API_TOKEN=token 8731b4177523d4f:3c1232bbcf8f35c
+VITE_FRAPPE_API_TOKEN=8731b4177523d4f:3c1232bbcf8f35c
 VITE_FRAPPE_X_KEY=ffd9b415-ccd9-4af9-9808-0e96608ecaa3
